--- a/index.htm
+++ b/index.htm
@@ -120,40 +120,40 @@
                 <img src="f/i/types/1.png" alt="">
               </div>
               <p class="types__subtitle">по назначению:</p>
-              <p><a href="#goods-popup" class="types__link modal-goods" data-name="Резервуар для воды" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Резервуары для воды</a></p>
-              <p><a href="#goods-popup" class="types__link modal-goods" data-name="Резервуар для нефти и нефтепродуктов" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Резервуары для нефти <br>и нефтепродуктов</a></p>
-              <p><a href="#goods-popup" class="types__link modal-goods" data-name="Резервуар пожарный (противопожарный)" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Резервуары пожарные (противопожарные)</a></p>
-              <p><a href="#goods-popup" class="types__link modal-goods" data-name="Резервуар для топлива" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Резервуары для топлива</a></p>
-              <p><a href="#goods-popup" class="types__link modal-goods" data-name="Резервуар для масла" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Резервуары для масла</a></p>
+              <p><a href="#goods-popup" class="types__name modal-goods" data-name="Резервуар для воды" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Резервуары для воды</a></p>
+              <p><a href="#goods-popup" class="types__name modal-goods" data-name="Резервуар для нефти и нефтепродуктов" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Резервуары для нефти <br>и нефтепродуктов</a></p>
+              <p><a href="#goods-popup" class="types__name modal-goods" data-name="Резервуар пожарный (противопожарный)" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Резервуары пожарные (противопожарные)</a></p>
+              <p><a href="#goods-popup" class="types__name modal-goods" data-name="Резервуар для топлива" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Резервуары для топлива</a></p>
+              <p><a href="#goods-popup" class="types__name modal-goods" data-name="Резервуар для масла" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Резервуары для масла</a></p>
             </div><div class="types__item">
               <div class="types__img">
                 <img src="f/i/types/2.png" alt="">
               </div>
               <p class="types__subtitle">по назначению:</p>
-              <p><a href="#goods-popup" class="types__link modal-goods" data-name="Резервуар подземный" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Резервуары подземные</a></p>
-              <p><a href="#goods-popup" class="types__link modal-goods" data-name="Резервуар наземный" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Резервуары наземные</a></p>
+              <p><a href="#goods-popup" class="types__name modal-goods" data-name="Резервуар подземный" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Резервуары подземные</a></p>
+              <p><a href="#goods-popup" class="types__name modal-goods" data-name="Резервуар наземный" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Резервуары наземные</a></p>
             </div><div class="types__item">
               <div class="types__img">
                 <img src="f/i/types/3.png" alt="">
               </div>
               <p class="types__subtitle">по назначению:</p>
-              <p><a href="#goods-popup" class="types__link modal-goods" data-name="Одностенный резервуар" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Одностенные резервуары</a></p>
-              <p><a href="#goods-popup" class="types__link modal-goods" data-name="Двустенный резервуар" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Двустенные резервуары</a></p>
+              <p><a href="#goods-popup" class="types__name modal-goods" data-name="Одностенный резервуар" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Одностенные резервуары</a></p>
+              <p><a href="#goods-popup" class="types__name modal-goods" data-name="Двустенный резервуар" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Двустенные резервуары</a></p>
             </div><div class="types__item">
               <div class="types__img">
                 <img src="f/i/types/4.png" alt="">
               </div>
               <p class="types__subtitle">по назначению:</p>
-              <p><a href="#goods-popup" class="types__link modal-goods" data-name="Однокамерный резервуар" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Однокамерные резервуары</a></p>
-              <p><a href="#goods-popup" class="types__link modal-goods" data-name="Многокамерный резервуар" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Многокамерные резервуары</a></p>
+              <p><a href="#goods-popup" class="types__name modal-goods" data-name="Однокамерный резервуар" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Однокамерные резервуары</a></p>
+              <p><a href="#goods-popup" class="types__name modal-goods" data-name="Многокамерный резервуар" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Многокамерные резервуары</a></p>
             </div><div class="types__item">
               <div class="types__img">
                 <img src="f/i/types/5.png" alt="">
               </div>
               <p class="types__subtitle">по назначению:</p>
-              <p><a href="#goods-popup" class="types__link modal-goods" data-name="Горизонтальный резервуар" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Горизонтальные резервуары</a></p>
-              <p><a href="#goods-popup" class="types__link modal-goods" data-name="Цилиндрический резервуар" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Цилиндрические резервуары</a></p>
-              <p><a href="#goods-popup" class="types__link modal-goods" data-name="Прямоугольный резервуар" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Прямоугольные резервуары</a></p>
+              <p><a href="#goods-popup" class="types__name modal-goods" data-name="Горизонтальный резервуар" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Горизонтальные резервуары</a></p>
+              <p><a href="#goods-popup" class="types__name modal-goods" data-name="Цилиндрический резервуар" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Цилиндрические резервуары</a></p>
+              <p><a href="#goods-popup" class="types__name modal-goods" data-name="Прямоугольный резервуар" data-img="f/i/goods.jpg" data-plus="<p>Сравнительно дешевое производство</p><p>Простота конструкции</p>" data-minus="<p>При частичном разрушении ствола, он подлежит замене целиком</p>">Прямоугольные резервуары</a></p>
             </div><div class="types__item">
               <div class="types__img types__img_calc">
                 <a href="#callback-popup" class="types__calc modal-inline">Рассчитать<br>стоимость<br>резервуара</a>
@@ -290,25 +290,28 @@
           <p class="subsection__title">Готовые решения</p>
           <div class="types__holder">
             <div class="types__item">
-              <a href="#">
+              <a href="#ready-popup" class="modal-ready" data-name="Резервуар наземный одностенный объемом 3м³" data-img="f/i/projects/4.jpg" data-file="asdads" data-params="<p>D=1250 мм</p><p>L=2750 мм</p><p>m=530-830 кг</p>" data-use="Нефтепродуктов, воды, масел и смазочных материалов" data-equip="Для контроля наполнения/выдачи используемого продукта" data-add="<p>Теплоизоляция;</p><p>Нагревательный элемент;</p> <p>Лестница и площадка обслуживания;</p> <p>Внутреннее покрытие;</p>">
                 <span class="types__img">
                   <img src="f/i/types/6.png" alt="">
                 </span>
-                <span class="types__link">Резервуар наземный одностенный объемом от 3 до 20 м³</span>
+                <span class="types__name">Резервуар наземный одностенный объемом 3м³</span>
+                <span class="types__info">D=1250 мм, L=2750 мм, m=530-830 кг</span>
               </a>
             </div><div class="types__item">
-              <a href="#">
+              <a href="#ready-popup" class="modal-ready" data-name="Резервуар наземный одностенный объемом 5м³" data-img="f/i/projects/4.jpg" data-file="asdads" data-params="<p>D=1900 мм</p> <p>L=2030мм</p> <p>m=700-1010 кг</p>" data-use="Нефтепродуктов, воды, масел и смазочных материалов" data-equip="Для контроля наполнения/выдачи используемого продукта" data-add="<p>Теплоизоляция;</p><p>Нагревательный элемент;</p> <p>Лестница и площадка обслуживания;</p> <p>Внутреннее покрытие;</p>">
                 <span class="types__img">
                   <img src="f/i/types/7.png" alt="">
                 </span>
-                <span class="types__link">Резервуар наземный одностенный объемом от 40 до 60 м³</span>
+                <span class="types__name">Резервуар наземный одностенный объемом 5м³</span>
+                <span class="types__info">DD=1900 мм, L=2030мм, m=700-1010 кг</span>
               </a>
             </div><div class="types__item">
-              <a href="#">
+              <a href="#ready-popup" class="modal-ready" data-name="Резервуар подземный одностенный объемом 10м³" data-img="f/i/projects/4.jpg" data-file="asdads" data-params="<p>D=2220мм</p> <p>L=3310мм</p> <p>m=990-1800 кг</p>" data-use="Нефтепродуктов, воды, масел и смазочных материалов" data-equip="Для контроля наполнения/выдачи используемого продукта" data-add="<p>Теплоизоляция;</p><p>Нагревательный элемент;</p> <p>Лестница и площадка обслуживания;</p> <p>Внутреннее покрытие;</p>">
                 <span class="types__img">
                   <img src="f/i/types/8.png" alt="">
                 </span>
-                <span class="types__link">Резервуар подземный одностенный объемом от 40 до 60 м³</span>
+                <span class="types__name">Резервуар подземный одностенный объемом 10м³</span>
+                <span class="types__info">D=2220мм, L=3310мм, m=990-1800 кг</span>
               </a>
             </div>
           </div>
@@ -461,6 +464,37 @@
               <input type="email" class="input" placeholder="E-mail" name="email">
               <textarea class="input" placeholder="Введите Ваше сообщение" name="message"></textarea>
               <div class="popup__btn"><input type="hidden" class="form-theme" name="theme" value=""><input type="hidden" name="type" value="consult"><input class="btn" type="submit" data-loading-text="Отправка..." value="Получить расчет"></div>
+            </form>
+            <div class="form-success">Ваше сообщение отправлено!</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="popup popup_goods" id="ready-popup" style="width: 840px;">
+      <div class="popup__holder">
+        <p class="popup__title"></p>
+        <div class="popup__half">
+          <img src="" alt="">
+          <p class="popup__file"></p>
+          <div class="popup__notes"></div>
+        </div><div class="popup__half">
+          <div class="form-wrap">
+            <form id="questionform" method="post" action="/send/">
+              <div class="input-wrap">
+              <label for="questionform-name" class="input-hint">
+                Фамилия и Имя<span>*</span>
+              </label>
+              <input type="text" class="input" id="questionform-name" value="" name="person">
+            </div>
+            <div class="input-wrap">
+              <label for="questionform-phone" class="input-hint">
+                Телефон<span>*</span>
+              </label>
+                <input type="tel" id="questionform-phone" class="input" value="" name="phone">
+              </div>
+              <input type="email" class="input" placeholder="E-mail" name="email">
+              <textarea class="input" placeholder="Введите Ваше сообщение" name="message"></textarea>
+              <div class="popup__btn"><input type="hidden" class="form-theme" name="theme" value=""><input type="hidden" name="type" value="consult"><input class="btn" type="submit" data-loading-text="Отправка..." value="Отправить заявку"></div>
             </form>
             <div class="form-success">Ваше сообщение отправлено!</div>
           </div>
