--- a/index.htm
+++ b/index.htm
@@ -303,7 +303,7 @@
                   <img src="f/i/types/7.png" alt="">
                 </span>
                 <span class="types__name">Резервуар наземный одностенный объемом 5м³</span>
-                <span class="types__info">DD=1900 мм, L=2030мм, m=700-1010 кг</span>
+                <span class="types__info">D=1900 мм, L=2030мм, m=700-1010 кг</span>
               </a>
             </div><div class="types__item">
               <a href="#ready-popup" class="modal-ready" data-name="Резервуар подземный одностенный объемом 10м³" data-img="f/i/projects/4.jpg" data-file="asdads" data-params="<p>D=2220мм</p> <p>L=3310мм</p> <p>m=990-1800 кг</p>" data-use="Нефтепродуктов, воды, масел и смазочных материалов" data-equip="Для контроля наполнения/выдачи используемого продукта" data-add="<p>Теплоизоляция;</p><p>Нагревательный элемент;</p> <p>Лестница и площадка обслуживания;</p> <p>Внутреннее покрытие;</p>">
