--- a/index.htm
+++ b/index.htm
@@ -57,7 +57,7 @@
   </head>
 <body>
   <div class="wrap clearfix">  
-    <header class="header js-scroll-target clearfix" data-scrollto="0">
+    <header class="header clearfix">
       <a href="#" class="header__ham iconize-ham">&nbsp;</a>
       <div class="header__holder">
         <div class="holder">
@@ -85,7 +85,7 @@
     </header>
     <div class="content">
       <div class="preface">
-        <div class="holder">
+        <div class="holder preface__holder">
           <h1 class="preface__text">
             Стальные<br>резервуары<br><span>от производителя</span>
           </h1>
